--- a/3-2 Fantasy Battle Isometric/Source/Assembly-CSharp-vs.csproj
+++ b/3-2 Fantasy Battle Isometric/Source/Assembly-CSharp-vs.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{9F4F1DF1-3E94-79C9-9509-4A1EC4FDFF58}</ProjectGuid>
+	<ProjectGuid>{3D166331-9C0B-EAE5-1593-29E93EB4FC78}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -46,11 +46,10 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\3D\CellDisplay.cs" />
-     <Compile Include="Assets\Scripts\3D\CellObjectFactory.cs" />
+     <Compile Include="Assets\Scripts\3D\CameraPanner.cs" />
+     <Compile Include="Assets\Scripts\3D\CameraRigBuilder.cs" />
      <Compile Include="Assets\Scripts\3D\GameWorldCursor.cs" />
      <Compile Include="Assets\Scripts\3D\SkyboxControl.cs" />
-     <Compile Include="Assets\Scripts\3D\TokenDisplay.cs" />
      <Compile Include="Assets\Scripts\GUI\Devices\FancyText.cs" />
      <Compile Include="Assets\Scripts\GUI\Devices\Panel.cs" />
      <Compile Include="Assets\Scripts\GUI\GUIMaster.cs" />
@@ -129,9 +128,11 @@
      <Compile Include="Assets\Scripts\Game\Actions\Standard\ARage.cs" />
      <Compile Include="Assets\Scripts\Game\Actions\Standard\AShock.cs" />
      <Compile Include="Assets\Scripts\Game\Board\Board.cs" />
+     <Compile Include="Assets\Scripts\Game\Board\BorderFactory.cs" />
      <Compile Include="Assets\Scripts\Game\Board\Cell.cs" />
+     <Compile Include="Assets\Scripts\Game\Board\CellDisplay.cs" />
+     <Compile Include="Assets\Scripts\Game\Board\CellFactory.cs" />
      <Compile Include="Assets\Scripts\Game\Board\CellGroup.cs" />
-     <Compile Include="Assets\Scripts\Game\Board\CellSprite.cs" />
      <Compile Include="Assets\Scripts\Game\Board\Direction.cs" />
      <Compile Include="Assets\Scripts\Game\Board\Map.cs" />
      <Compile Include="Assets\Scripts\Game\Misc\Core.cs" />
@@ -156,8 +157,8 @@
      <Compile Include="Assets\Scripts\Game\Tokens\TokenComponents\Health.cs" />
      <Compile Include="Assets\Scripts\Game\Tokens\TokenComponents\Label.cs" />
      <Compile Include="Assets\Scripts\Game\Tokens\TokenComponents\Sensor.cs" />
-     <Compile Include="Assets\Scripts\Game\Tokens\TokenComponents\Sprite.cs" />
      <Compile Include="Assets\Scripts\Game\Tokens\TokenComponents\Timer.cs" />
+     <Compile Include="Assets\Scripts\Game\Tokens\TokenComponents\TokenDisplay.cs" />
      <Compile Include="Assets\Scripts\Game\Tokens\TokenComponents\Wallet.cs" />
      <Compile Include="Assets\Scripts\Game\Tokens\TokenComponents\Watch.cs" />
      <Compile Include="Assets\Scripts\Game\Tokens\TokenHandling\Obstacle.cs" />
@@ -213,8 +214,6 @@
      <Compile Include="Assets\Scripts\Generic\Group.cs" />
      <Compile Include="Assets\Scripts\Generic\Queue.cs" />
      <Compile Include="Assets\Scripts\Generic\ReDictionary.cs" />
-     <Compile Include="Assets\Scripts\Graphics\CameraPanner.cs" />
-     <Compile Include="Assets\Scripts\Graphics\CameraRigBuilder.cs" />
      <Compile Include="Assets\Scripts\Graphics\Icons.cs" />
      <Compile Include="Assets\Scripts\Graphics\ImageLoader.cs" />
      <Compile Include="Assets\Scripts\Graphics\SpriteEffects.cs" />
