--- a/5 Heart of Attack Rebuild/Source/Assembly-CSharp-vs.csproj
+++ b/5 Heart of Attack Rebuild/Source/Assembly-CSharp-vs.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{56D9602D-35E6-5CEB-75C6-2A090F909979}</ProjectGuid>
+	<ProjectGuid>{83EF342A-6A98-A226-591E-DAA6A470B4CC}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -85,6 +85,7 @@
      <Compile Include="Assets\Scripts\Logic\Factions\Faction.cs" />
      <Compile Include="Assets\Scripts\Logic\Factions\FactionEnum.cs" />
      <Compile Include="Assets\Scripts\Logic\Misc\Closure.cs" />
+     <Compile Include="Assets\Scripts\Logic\Misc\Closure2.cs" />
      <Compile Include="Assets\Scripts\Logic\Misc\Core.cs" />
      <Compile Include="Assets\Scripts\Logic\Misc\Exceptions.cs" />
      <Compile Include="Assets\Scripts\Logic\Misc\Force.cs" />
